<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pedrofialho.myweatherapp.presentation.SettingsActivity">


    <!-- General -->


    <TextView
        android:text="@string/pref_header_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:id="@+id/general_head"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
        android:background="@android:color/holo_orange_light"
        android:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:title="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:text="@string/connectivity_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Connectivity_description"
        android:layout_marginStart="23dp"
        android:layout_below="@+id/Connectivity"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/general_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/general_description"
        android:layout_below="@+id/general_head"
        android:layout_alignStart="@+id/Connectivity_description" />

    <TextView
        android:text="@string/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/Notification"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/connect_button"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/stat_notify_sync"
        android:id="@+id/connect_button"
        android:layout_alignBottom="@+id/Connectivity_description"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_info_black_24dp"
        android:id="@+id/imageButton"
        android:layout_alignTop="@+id/Notification"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/notification_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Notification_description"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignStart="@+id/Connectivity_description" />

    <TextView
        android:text="@string/connectivity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Connectivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/general_button"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_manage"
        android:id="@+id/general_button"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/general_description"
        android:layout_alignStart="@+id/connect_button" />


</RelativeLayout>
