<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pedrofialho.myweatherapp.presentation.ChoiceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_orange_light"
        android:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:title="@string/app_name"/>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:srcCompat="@drawable/weather"
        android:id="@+id/imageView8"
        android:layout_above="@+id/daily"
        android:layout_alignParentStart="true"
        android:contentDescription="DailyForecast" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:srcCompat="@drawable/forecast"
        android:id="@+id/imageView11"
        android:contentDescription="Forecast"
        android:layout_above="@+id/forecast"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forecast"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="166dp"
        android:layout_alignStart="@+id/imageView11" />

    <Button
        android:text="@string/daily_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/daily"
        android:layout_below="@+id/imageView11"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/imageView8" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daily"
        android:layout_toStartOf="@+id/imageView11"
        android:layout_marginTop="33dp"
        android:id="@+id/progressBar2"
        android:visibility="invisible"
        />

    <TextView
        android:text="@string/text_choice_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text_Choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
