<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notification_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pedrofialho.myweatherapp.presentation.NotificationSettingsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarNotification"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_orange_light"
        android:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:title="@string/app_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView3"
        app:srcCompat="@drawable/ic_info_black_24dp" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/imageView"
        android:timePickerMode="spinner"
        android:visibility="invisible" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timePicker"
        android:layout_alignStart="@+id/timePicker"
        android:layout_below="@+id/timePicker"
        android:layout_marginTop="23dp"
        android:text="@string/done_button"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/timePicker"
        android:layout_below="@+id/toolbarNotification"
        android:layout_marginTop="36dp"
        android:text="@string/notification_title" />
</RelativeLayout>
